--- a/css/styles.css
+++ b/css/styles.css
@@ -24,17 +24,17 @@
     --display-small-font-weight: 400; */
 
     /* Headline */
-    /* --headline-large-font-size: 32px;
-    --headline-large-font-weight: 400;
-    --headline-medium-font-size: 28px;
+    --headline-large-font-size: 2.5rem;
+    --headline-large-font-weight: 500;
+    /* --headline-medium-font-size: 28px;
     --headline-medium-font-weight: 400;
     --headline-small-font-size: 24px;
     --headline-small-font-weight: 400; */
 
     /* Title */
-    /* --title-large-font-size: 22px;
+    --title-large-font-size: 1.5rem;
     --title-large-font-weight: 500;
-    --title-medium-font-size: 16px;
+    /* --title-medium-font-size: 16px;
     --title-medium-font-weight: 500;
     --title-small-font-size: 14px;
     --title-small-font-weight: 500; */
@@ -50,10 +50,10 @@
     /* Body */
     --body-large-font-size: 1.5rem;
     --body-large-font-weight: 400;
-    /* --body-medium-font-size: 14px;
+    --body-medium-font-size: 1.25rem;
     --body-medium-font-weight: 400;
-    --body-small-font-size: 12px;
-    --body-small-font-weight: 400; */
+    --body-small-font-size: 1rem;
+    --body-small-font-weight: 400;
 
 }
 
@@ -71,6 +71,8 @@ body {
     background: linear-gradient(#f5f9ff, #fff9f5);
     background-attachment: fixed;
     background-size: cover;
+
+    font-family: "Poppins", serif;
 }
 
 .header {
@@ -208,4 +210,101 @@ body {
 .hero-section__img {
     width: 100%;
     height: auto;
+}
+
+.section-divider {
+    height: 1px;
+    background: linear-gradient(to right, var(--color-primary), var(--color-secondary));
+}
+
+.how-it-works {
+    padding: var(--padding-vertical-large) var(--padding-horizontal-large);
+    display: flex;
+    justify-content: center;
+}
+
+.how-it-works__container {
+    max-width: var(--max-width);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-large);
+}
+
+.how-it-works__title {
+    display: flex;
+    justify-content: center;
+
+    font-size: var(--headline-large-font-size);
+    font-weight: var(--headline-large-font-weight);
+}
+
+.how-it-works__main {
+    display: flex;
+    align-items: center;
+    gap: var(--spacing-large);
+}
+
+.how-it-works__img-wrapper {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.how-it-works__img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.how-it-works__text {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-large);
+}
+
+.how-it-works__cards {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-large);
+}
+
+.how-it-works__card {
+    max-width: 48rem;
+    background-color: #ffffff;
+    padding: var(--spacing-large);
+    border-radius: 1.5rem;
+    display: flex;
+    gap: 1rem;
+}
+
+.how-it-works__card-icon {
+    height: 2rem;
+    width: 2rem;
+}
+
+.how-it-works__card-content {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.how-it-works__card-title {
+    font-size: var(--title-large-font-size);
+    font-weight: var(--title-large-font-weight);
+}
+
+.how-it-works__card-description {
+    font-size: var(--body-medium-font-size);
+    font-weight: var(--body-medium-font-weight);
+}
+
+.how-it-works__cta-bnt {
+    display: flex;
+    justify-content: center;
+}
+
+.btn--blue.btn--outlined {
+    color: var(--color-primary);
+    border: 2px solid var(--color-primary);
 }
