atualiza design da secao how-it-works e adiciona responsividade
- atualiza o desing dos cards
- adiciona resposividade a variaveis globais, onde os valores mudam para telas menores que 40rem
- atualiza os textos de descricao nos cards da secao how-it-works
- atualiza as dimencoes do svg da secao how-it-works

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,11 @@
 @media (max-width: 40rem) {
     :root {
         --padding-horizontal: 1rem;
-        --display-large-font-size: 2.5rem;
+        --display-large-font-size: 2rem;
+        --headline-large-font-size: 2rem;
+        --title-large-font-size: 1.25rem;
+        --body-large-font-size: 1.25rem;
+        --body-medium-font-size: 1rem;
     }
 }
 
@@ -129,10 +133,17 @@ body {
 
 .card {
     background-color: var(--color-surface);
-    padding: var(--spacing);
-    border-radius: var(--spacing);
+    padding: 1.5rem;
+    border-radius: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.card__header {
     display: flex;
     gap: 1rem;
+    align-items: center;
 }
 
 .card__icon-wrapper {
@@ -144,9 +155,11 @@ body {
     width: 2rem;
 }
 
-.card__content {
-    display: flex;
-    flex-direction: column;
+@media (max-width: 40rem) {
+    .card__icon {
+        height: 1.5rem;
+        width: 1.5rem;
+    }
 }
 
 .card__title {
@@ -324,15 +337,16 @@ body {
     gap: var(--spacing);
 }
 
-.how-it-works__main {
+.how-it-works__content {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     gap: var(--spacing);
 }
 
 .how-it-works__img-wrapper {
+    max-height: 32rem;
+    min-width: 25rem;
     flex: 1;
-    height: 100%;
     display: flex;
     justify-content: center;
 }
@@ -340,16 +354,11 @@ body {
 .how-it-works__img {
     max-height: 100%;
     max-width: 100%;
-}
-
-.how-it-works__text {
-    display: flex;
-    flex-direction: column;
-    gap: var(--spacing);
+    object-fit: contain;
 }
 
 .how-it-works__card-container {
-    max-width: 48rem;
+    max-width: 50rem;
     display: flex;
     flex-direction: column;
     gap: var(--spacing);
@@ -358,6 +367,24 @@ body {
 .how-it-works__cta-bnt {
     display: flex;
     justify-content: center;
+}
+
+@media (max-width: 48rem) {
+    .how-it-works__cta-bnt > .btn {
+        width: 100%;
+    }
+}
+
+@media (max-width: 75rem) {
+    .how-it-works__content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .how-it-works__img-wrapper {
+        max-height: 16rem;
+        min-width: auto;
+    }
 }
 
 .offer-services {
