--- a/css/styles.css
+++ b/css/styles.css
@@ -137,10 +137,11 @@ body {
 .card {
     background-color: var(--color-surface);
     padding: 1.5rem;
-    border-radius: 2rem;
+    border-radius: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
 }
 
 .card__header {
