--- a/css/styles.css
+++ b/css/styles.css
@@ -238,9 +238,28 @@ body {
 .header__menu {
     padding-inline-start: 0;
     list-style: none;
+    height: 100%;
     display: flex;
     gap: var(--spacing);
 }
+
+.header__menu-item {
+    position: relative;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.header__menu-item--active::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0.25rem;
+    border-radius: 0.25rem;
+    background-color: var(--color-primary);
+} 
 
 .header__menu-link {
     text-decoration: none;
@@ -250,14 +269,13 @@ body {
     transition: color 0.3s ease;
 }
 
-.header__menu-link:hover {
-    color: var(--color-secondary);
+.header__menu-item--active .header__menu-link {
+    font-weight: calc(var(--label-medium-font-weight) + 100);
+    color: var(--color-primary);
 }
 
-.header__menu-link--disabled {
-    pointer-events: none;
-    cursor: not-allowed;
-    opacity: 0.5;
+.header__menu-link:hover {
+    color: var(--color-secondary);
 }
 
 .header__menu-toggle {
@@ -306,6 +324,22 @@ body {
         display: flex;
         box-shadow: 0 0 16px rgba(0, 0, 0, 0.25);
         text-align: center;
+    }
+
+    .header__menu-item--active {
+        background-color: var(--color-primary);
+    }
+
+    .header__menu-item--active::after {
+        content: none;
+    }
+
+    .header__menu-link {
+        transition: none;
+    }
+    
+    .header__menu-item--active .header__menu-link {
+        color: var(--color-on-primary);
     }
 }
 
